# substrate-node-template

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: check.yml
docs/nodes/Add trusted nodes/: trusted_nodes.md
docs/nodes/Add trusted nodes/keys/: node-key-1  node-key-2  node01.md  node02.md
docs/substrate-guide/: H160.md
docs/upgrade/: Upgrade.md  set-code-sudo-event.avif  set-code-transaction.avif
pallets/ethereum-checked/: Cargo.toml
pallets/unified-accounts/: Cargo.toml
pallets/unified-accounts/src/: lib.rs  weights.rs
precompiles/assets-erc20/: Cargo.toml
precompiles/assets-erc20/src/: lib.rs
precompiles/dispatch-lockdrop/: Cargo.toml  DispatchLockdrop.sol
precompiles/dispatch-lockdrop/src/: lib.rs  mock.rs  tests.rs
precompiles/sr25519/: Cargo.toml  SR25519.sol
precompiles/sr25519/src/: lib.rs
precompiles/substrate-ecdsa/: Cargo.toml  SubstrateEcdsa.sol
precompiles/substrate-ecdsa/src/: lib.rs
precompiles/unified-accounts/: Cargo.toml
precompiles/unified-accounts/src/: lib.rs
primitives/: Cargo.toml
primitives/src/: evm.rs  genesis.rs  lib.rs  precompiles.rs
runtime/development/: Cargo.toml
runtime/development/src/: assets_api.rs  constants.rs  genesis_config.rs  impls.rs  lib.rs  precompiles.rs
