[package]
name = "node-primitives"
version = "2.0.0"
authors.workspace = true
description = "Substrate node low-level primitives. (polkadot v1.15.0)"
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# third-party dependencies
impl-trait-for-tuples = { workspace = true }
log = { workspace = true }
codec = { workspace = true }
scale-info = { workspace = true }

# Substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-assets = { workspace = true }
pallet-collective = { workspace = true }
pallet-membership = { workspace = true }
pallet-treasury = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }


[features]
default = ["std"]
std = [
    "log/std",
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
]

runtime-benchmarks = []
try-runtime = []
