[package]
name = "node-primitives"
version = "2.0.0"
authors.workspace = true
description = "Substrate node low-level primitives. (polkadot v1.15.0)"
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
publish = false

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# third-party dependencies
impl-trait-for-tuples = { workspace = true }
log = { workspace = true }
codec = { workspace = true }
scale-info = { workspace = true }

# Ethereum/Frontier dependencies
ethereum = { workspace = true, features = ["with-codec"] }
ethereum-types = { workspace = true }
fp-evm = { workspace = true }

# Substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-assets = { workspace = true }
pallet-collective = { workspace = true }
pallet-membership = { workspace = true }
pallet-treasury = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

pallet-contracts = { workspace = true }

# Frontier dependencies
pallet-evm = { workspace = true }

# Substrate (Self) pallets & dependencies
pallet-evm-precompile-assets-erc20 = { workspace = true }
pallet-evm-precompile-dispatch = { workspace = true }
# pallet-xc-asset-config = { workspace = true }


[features]
default = ["std"]
std = [
    "log/std",
    "codec/std",
    "scale-info/std",
    "ethereum-types/std",
    "ethereum/std",
    "fp-evm/std",
    "frame-support/std",
    "pallet-treasury/std",
    "frame-system/std",
    "pallet-membership/std",
    "pallet-collective/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-core/std",
    "sp-io/std",
    "pallet-assets/std",
    "pallet-evm/std",
    "pallet-contracts/std",
    "pallet-evm-precompile-assets-erc20/std",
    "pallet-evm-precompile-dispatch/std",
    "sp-arithmetic/std",

]

runtime-benchmarks = []
try-runtime = []
