[package]
name = "node-template-runtime"
version = "3.0.0"
authors.workspace = true
description = "Substrate node kitchensink runtime. (polkadot v1.15.0)"
edition.workspace = true
build = "build.rs"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
publish = false


[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]

# third-party dependencies
codec = { features = ["derive", "max-encoded-len"], workspace = true }
scale-info = { features = ["derive", "serde"], workspace = true }
static_assertions = { workspace = true, default-features = true }
log = { workspace = true }
serde_json = { features = ["alloc", "arbitrary_precision"], workspace = true }

# pallet-asset-conversion: turn on "num-traits" feature
primitive-types = { features = [
	"codec",
	"num-traits",
	"scale-info",
], workspace = true }
polkadot-sdk = { features = ["runtime", "tuples-96"], workspace = true }

# Local Dependencies
node-primitives = { workspace = true }


[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[features]
default = ["std"]
with-tracing = ["polkadot-sdk/with-tracing"]
std = [
	"codec/std",
	"log/std",
	"node-primitives/std",
	"polkadot-sdk/std",
	"scale-info/std",
	"serde_json/std",
	"substrate-wasm-builder",
]
runtime-benchmarks = ["polkadot-sdk/runtime-benchmarks"]
try-runtime = ["polkadot-sdk/try-runtime"]

metadata-hash = ["substrate-wasm-builder/metadata-hash"]
